--- a/index.html
+++ b/index.html
@@ -146,7 +146,32 @@ to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eg
          </section>
 
     </main>
-    <footer>
+    <footer class="secondery-bg">
+        <div class="footer-column">
+            <h3 class="section-title">Lets Connect</h3>
+            <p>Please fill out the form on this section to contact with me or call between 9:00 A.M and 8.00 P.M ET, Monday through Friday.</p>
+            <div>
+
+            </div>
+            <a href=""><img src="images/icons/facebook.png" alt=""></a>
+            <a href=""><img src="images/icons/insta.png" alt=""></a>
+            <a href=""><img src="images/icons/twitter.png" alt=""></a>
+
+
+        </div>
+        <div class="footer-column">
+            <h3 class="section-title">Lets inbox me</h3>
+            <form action="">
+                <input type="text" placeholder="Your Name">
+                <input type="email" placeholder="your eemail">
+                <textarea name="" id="" cols="30" rows="10"></textarea>
+                <input class="btn-primary" type="submit" value="submit">
+                
+
+            </form>
+
+
+        </div>
 
     </footer>
 </body>
